--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>Klicke hier, um eine neue Abmeldung einzureichen.</p>
         </div>
 
-        <div class="panel big">
+        <div class="panel big" onclick="document.getElementById('bewerberModal').style.display='flex'" style="cursor: pointer;">
             <div class="panel-top">
                 <span class="panel-header">📝 BEWERBER</span>
                 <span id="bewerberCounter" class="badge">0 neu</span>
