--- a/management.html
+++ b/management.html
@@ -216,7 +216,7 @@ function renderBewerberManagement() {
             </div>
             <div style="font-size:0.85rem;">
                 📱 ${b.tel}<br>
-                <small>Visum: <b>${b.visum}</b> | ⭐ Optik: <b>${b.aussehen}/10</b></small>
+                <small>Visum: <b>${b.visum}</b> | ⭐ Erscheinungsbild: <b>${b.aussehen}/10</b></small>
             </div>
             <div>
                 <span class="status-badge ${sClass}">${b.status}</span><br>
