--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         <div class="panel small">📦 Orders</div>
         <div class="panel small">🏭 Lager</div>
         <div class="panel small">🎵 Musik</div>
-        <div class="panel small">👕 Kleidung</div>
+        <div class="panel small" onclick="location.href='kleidung.html'" style="cursor: pointer;">
+            👕 Kleiderordnung
+        </div>
     </div>
 
     <div class="panel full-width" style="margin-top: 30px; cursor: default;">
