--- a/kleidung.html
+++ b/kleidung.html
@@ -5,44 +5,125 @@
     <title>Kleiderordnung | Burgershot</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .dresscode-container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-        
-        /* Admin-Bereich zum Hinzufügen */
-        .admin-only { 
-            display: none; 
-            background: rgba(250, 172, 21, 0.1); 
-            padding: 20px; 
-            border-radius: 15px; 
-            border: 1px dashed var(--primary);
-            margin-bottom: 40px;
-        }
+    /* Hintergrund & Container */
+    body { background-attachment: fixed; }
+    .dresscode-container { max-width: 1100px; margin: 0 auto; padding: 40px 20px; }
+    
+    /* Überschriften */
+    h1 { font-size: 2.5rem; color: var(--primary); text-shadow: 0 0 20px rgba(250,172,21,0.4); }
 
-        .outfit-card {
-            display: flex; gap: 30px; align-items: center;
-            margin-bottom: 40px; background: rgba(255, 255, 255, 0.05);
-            padding: 25px; border-radius: 15px; border: 1px solid var(--glass-border);
-            position: relative;
-        }
+    /* Admin Bereich Styling */
+    .admin-only { 
+        background: rgba(255, 255, 255, 0.03); 
+        backdrop-filter: blur(10px);
+        padding: 30px; 
+        border-radius: 20px; 
+        border: 1px solid rgba(250, 172, 21, 0.3);
+        margin-bottom: 50px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+    }
 
-        .outfit-info { flex: 1; }
-        .outfit-image { flex: 1; text-align: center; }
-        .outfit-image img { 
-            max-width: 100%; max-height: 400px; border-radius: 10px; 
-            border: 2px solid var(--primary); 
-        }
+    /* Outfit Karten Layout */
+    #outfitList {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+        gap: 30px;
+    }
 
-        .delete-outfit {
-            position: absolute; top: 10px; right: 10px;
-            background: #e74c3c; color: white; border: none;
-            padding: 5px 10px; border-radius: 5px; cursor: pointer; display: none;
-        }
+    .outfit-card {
+        background: rgba(255, 255, 255, 0.05);
+        backdrop-filter: blur(15px);
+        border-radius: 20px;
+        border: 1px solid rgba(255,255,255,0.1);
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
 
-        input, textarea {
-            width: 100%; padding: 10px; margin-bottom: 10px;
-            background: rgba(0,0,0,0.3); border: 1px solid var(--glass-border);
-            color: white; border-radius: 5px;
-        }
-    </style>
+    .outfit-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 15px 40px rgba(0,0,0,0.4);
+        border-color: var(--primary);
+    }
+
+    /* Bild-Bereich */
+    .outfit-image {
+        width: 100%;
+        height: 350px;
+        overflow: hidden;
+        background: #111;
+        border-bottom: 2px solid var(--primary);
+    }
+
+    .outfit-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Verhindert Verzerrung */
+        transition: transform 0.5s ease;
+    }
+
+    .outfit-card:hover .outfit-image img {
+        transform: scale(1.05);
+    }
+
+    /* Text-Bereich */
+    .outfit-info {
+        padding: 25px;
+        position: relative;
+    }
+
+    .outfit-info h2 {
+        margin: 0 0 15px 0;
+        color: var(--primary);
+        font-size: 1.6rem;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .outfit-info ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+
+    .outfit-info li {
+        padding: 8px 0;
+        border-bottom: 1px solid rgba(255,255,255,0.05);
+        font-size: 0.95rem;
+        opacity: 0.9;
+        display: flex;
+        align-items: center;
+    }
+
+    .outfit-info li::before {
+        content: "•";
+        color: var(--primary);
+        margin-right: 10px;
+        font-weight: bold;
+    }
+
+    /* Löschen Button Schicker */
+    .delete-outfit {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        background: rgba(231, 76, 60, 0.8);
+        border: none;
+        color: white;
+        padding: 8px 15px;
+        border-radius: 8px;
+        font-size: 0.75rem;
+        cursor: pointer;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+
+    .outfit-card:hover .delete-outfit {
+        opacity: 1;
+    }
+</style>
 </head>
 <body>
 
@@ -98,18 +179,15 @@
             const items = o.desc.split(',').map(item => `<li>${item.trim()}</li>`).join('');
 
             div.innerHTML = `
-                ${admin ? `<button class="delete-outfit" style="display:block" onclick="deleteOutfit(${index})">Löschen</button>` : ''}
-                <div class="outfit-info">
-                    <h2>${o.role}</h2>
-                    <ul>${items}</ul>
-                </div>
-                <div class="outfit-image">
-                    <img src="${o.img}" alt="${o.role}">
-                </div>
-            `;
-            list.appendChild(div);
-        });
-    }
+        <div class="outfit-image">
+            <img src="${o.img}" alt="${o.role}">
+        </div>
+        <div class="outfit-info">
+            ${admin ? `<button class="delete-outfit" onclick="deleteOutfit(${index})">Löschen</button>` : ''}
+            <h2>👔 ${o.role}</h2>
+            <ul>${items}</ul>
+        </div>
+    `;
 
     function addOutfit() {
         const role = document.getElementById("outfitRole").value;
