--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div style="display: flex; align-items: center; gap: 20px;">
             <img src="assets/logo.png" alt="Logo" style="width: 60px;">
             <div>
-                <h1 style="color: var(--primary); font-size: 1.5rem;">Willkommen bei Burgershot Intern</h1>
+                <h1 style="color: var(--primary); font-size: 1.5rem;">Willkommen beim BurgerShot Panel</h1>
                 <p style="opacity: 0.7;">Teamverwaltung & Organisation auf einen Blick.</p>
             </div>
         </div>
