--- a/index.html
+++ b/index.html
@@ -50,12 +50,25 @@
             <p>Klicke hier, um eine neue Abmeldung einzureichen.</p>
         </div>
 
-        <div class="panel big">
-            <div class="panel-top">
-                <span class="panel-header">📝 BEWERBER</span>
-                <span id="bewerberCounter" class="badge">0 neu</span>
+        <div class="panel">
+            <div class="panel-header">📝 Neuen Bewerber eintragen</div>
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px;">
+                <input type="text" id="bewName" placeholder="Vollständiger Name">
+                <input type="text" id="bewGeb" placeholder="Geburtsdatum (z.B. 01.01.1990)">
+                <input type="text" id="bewTel" placeholder="Telefonnummer">
+                <input type="text" id="bewVisum" placeholder="Visumstufe">
+        
+                <input type="text" id="bewZivi" placeholder="Zivi? (Ja / Falls nein: Fraktion)">
+        
+                <select id="bewLook">
+                    <option value="">Erscheinungsbild (1-10)</option>
+                    <option value="1">1 - Sehr ungepflegt</option>
+                    <option value="5">5 - Durchschnittlich</option>
+                    <option value="8">8 - Sehr gepflegt</option>
+                    <option value="10">10 - Perfekt</option>
+                </select>
             </div>
-            <p>Neue Bewerbungen im System.</p>
+            <button onclick="submitBewerbung()" style="width: 100%; margin-top: 15px;">Bewerber speichern</button>
         </div>
 
         <div class="panel big announcement-card" onclick="location.href='announcements.html'">
