--- a/index.html
+++ b/index.html
@@ -60,11 +60,17 @@
         
                 <input type="text" id="bewZivi" placeholder="Zivi? (Ja / Falls nein: Fraktion)">
         
-                <select id="bewLook">
+                <select id="bewersch">
                     <option value="">Erscheinungsbild (1-10)</option>
                     <option value="1">1 - Sehr ungepflegt</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
                     <option value="5">5 - Durchschnittlich</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
                     <option value="8">8 - Sehr gepflegt</option>
+                    <option value="9">9</option>
                     <option value="10">10 - Perfekt</option>
                 </select>
             </div>
