--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
         
                 <select id="bewersch">
                     <option value="">Erscheinungsbild (1-10)</option>
-                    <option value="1">1 - Sehr ungepflegt</option>
+                    <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
-                    <option value="5">5 - Durchschnittlich</option>
+                    <option value="5">5</option>
                     <option value="6">6</option>
                     <option value="7">7</option>
-                    <option value="8">8 - Sehr gepflegt</option>
+                    <option value="8">8</option>
                     <option value="9">9</option>
-                    <option value="10">10 - Perfekt</option>
+                    <option value="10">10</option>
                 </select>
             </div>
             <button onclick="submitBewerbung()" style="width: 100%; margin-top: 15px;">Bewerber speichern</button>
