--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <input type="text" id="bewTel" placeholder="Telefonnummer">
                 <input type="text" id="bewVisum" placeholder="Visumstufe">
         
-                <input type="text" id="bewZivi" placeholder="Zivi? (Ja / Falls nein: Fraktion)">
+                <input type="text" id="bewZivi" placeholder="Zivi? (Falls nein: Fraktion)">
         
                 <select id="bewersch">
                     <option value="">Erscheinungsbild (1-10)</option>
