--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="panel-header">📝 Neuen Bewerber eintragen</div>
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px;">
                 <input type="text" id="bewName" placeholder="Vollständiger Name">
-                <input type="text" id="bewGeb" placeholder="Geburtsdatum">
+                <input type="text" id="bewGeb" placeholder="Geburtsdatum (z.B. 01.01.1990)">
                 <input type="text" id="bewTel" placeholder="Telefonnummer">
                 <input type="text" id="bewVisum" placeholder="Visumstufe">
         
