--- a/management.html
+++ b/management.html
@@ -132,18 +132,16 @@
             </div>
         </div>
 
-        <div id="tab-abmeldungen" class="mgmt-tab" style="display:none;">
+        <div id="tab-abmeldungen" class="mgmt-tab">
             <div class="panel">
-                <div class="panel-header" style="margin-bottom:15px;">📅 Personal-Abmeldungen</div>
-        
-                <div class="grid-row grid-header" style="grid-template-columns: 1.5fr 2fr 1fr 1fr; font-weight: bold; opacity: 0.7; border-bottom: 1px solid var(--glass-border); padding-bottom: 10px; margin-bottom: 10px;">
-                    <span>Mitarbeiter / Zeitraum</span>
-                    <span>Grund</span>
-                    <span style="text-align: center;">Status</span>
+                <div class="panel-header" style="margin-bottom:15px;">📅 Team-Abmeldungen</div>
+                <div class="grid-row grid-header">
+                    <span>Name</span>
+                    <span>Zeitraum</span>
+                    <span>Status</span>
                     <span style="text-align: right;">Aktionen</span>
                 </div>
-
-                <div id="managementAbmeldungenList"></div>
+                <div id="abmList"></div>
             </div>
         </div>
 
