--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div style="display: flex; gap: 40px; text-align: center;">
             <div>
                 <div id="accCount" style="font-size: 1.8rem; font-weight: bold; color: var(--primary);">0</div>
-                <div style="font-size: 0.7rem; opacity: 0.6; text-transform: uppercase;">Accounts</div>
+                <div style="font-size: 0.7rem; opacity: 0.6; text-transform: uppercase;">Mitarbeiter</div>
             </div>
             <div>
                 <div id="heroAbmCount" style="font-size: 1.8rem; font-weight: bold; color: var(--primary);">0</div>
