--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         </div>
     
     </div> <div class="grid-bottom" style="margin-top: 25px;">
-        <div class="panel small">📦 Orders</div>
+        <div class="panel" onclick="location.href='bestellungen.html'" style="cursor: pointer;">
+            <div class="panel-header">📦 BESTELLUNGEN</div>
+            <p>Hier eintragen, was für das Lager gekauft werden muss.</p>
+        </div>
         <div class="panel small">🏭 Lager</div>
         <div class="panel small">🎵 Musik</div>
         <div class="panel small">👕 Kleidung</div>
