--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
             <p>Hier eintragen, was für das Lager gekauft werden muss.</p>
         </div>
         <div class="panel small">🏭 Lager</div>
-        <div class="panel small">🎵 Musik</div>
+        <div class="panel" onclick="location.href='musik.html'" style="cursor: pointer;">
+            <div class="panel-header">🎵 MUSIK / RADIO</div>
+            <p>Teile YouTube-Links und kopiere Songs für das Radio.</p>
+        </div>
         <div class="panel small">👕 Kleidung</div>
     </div>
 
