--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="panel-header">🎵 MUSIK / RADIO</div>
             <p>Teile YouTube-Links und kopiere Songs für das Radio.</p>
         </div>
-        <div class="panel small">👕 Kleidung</div>
+        <div class="panel small" onclick="location.href='kleidung.html'" style="cursor: pointer;">👕 Kleidung</div>
     </div>
 
     <div class="panel full-width" style="margin-top: 30px; cursor: default;">
