--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <p>Teile YouTube-Links und kopiere Songs für das Radio.</p>
         </div>
         <div class="panel small" onclick="location.href='kleidung.html'" style="cursor: pointer;">👕 Kleidung</div>
+        p>Hier siehst du die Kleiderordnung</p>
     </div>
 
     <div class="panel full-width" style="margin-top: 30px; cursor: default;">
