--- a/index.html
+++ b/index.html
@@ -64,8 +64,17 @@
                 <input type="text" id="bewVisum" placeholder="Visum" style="padding: 6px; font-size: 0.8rem;">
                 <input type="text" id="bewZivi" placeholder="Zivi/Frak" style="padding: 6px; font-size: 0.8rem;">
                 <select id="bewersch" style="padding: 6px; font-size: 0.8rem; background: rgba(0,0,0,0.3); color: white; border: 1px solid rgba(255,255,255,0.1); border-radius: 4px;">
-                    <option value="">Ersch. (1-10)</option>
-                    <option value="10">10</option><option value="5">5</option><option value="1">1</option>
+                    <option value="">Erscheinungsbild</option>
+                    <option value="10">10</option>
+                    <option value="10">9</option>
+                    <option value="10">8</option>
+                    <option value="10">7</option>
+                    <option value="10">6</option>
+                    <option value="10">5</option>
+                    <option value="10">4</option>
+                    <option value="5">3</option>
+                    <option value="1">2</option>
+                    <option value="10">1</option>
                 </select>
             </div>
             <button onclick="submitBewerbung()" style="width: 100%; margin-top: 10px; padding: 6px; font-size: 0.8rem;">Bewerber speichern</button>
