--- a/announcements.html
+++ b/announcements.html
@@ -6,29 +6,42 @@
     <title>Burgershot | Announcements</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Spezielles Styling für das Eingabefeld */
-        .custom-textarea {
-            width: 100%;
-            height: 120px;
-            background: rgba(0, 0, 0, 0.3);
-            border: 1px solid var(--glass-border);
-            color: white;
-            padding: 15px;
-            border-radius: 12px;
-            resize: none;
-            outline: none;
-            font-family: inherit;
-        }
-        .custom-textarea:focus { border-color: var(--primary); }
+    /* Spezielles Styling für das Eingabefeld */
+    .custom-textarea {
+        width: 100%;
+        height: 120px;
+        background: rgba(0, 0, 0, 0.3);
+        border: 1px solid var(--glass-border);
+        color: white;
+        padding: 15px;
+        border-radius: 12px;
+        resize: none;
+        outline: none;
+        font-family: inherit;
+        box-sizing: border-box; /* Wichtig, damit Padding nicht die Breite sprengt */
+    }
+    .custom-textarea:focus { border-color: var(--primary); }
 
-        /* Das Grid für die Karten */
-        .announce-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-            gap: 25px;
-            margin-top: 30px;
-        }
-    </style>
+    /* FIX: Das Grid für die Karten */
+    .announce-grid {
+        display: grid;
+        /* Wir nutzen auto-fill und begrenzen die maximale Breite */
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+        gap: 20px;
+        margin-top: 30px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    /* Damit die Karten innerhalb der Box bleiben und Text nicht rausläuft */
+    .announce-card {
+        display: flex;
+        flex-direction: column;
+        min-height: 250px;
+        word-wrap: break-word; /* Verhindert, dass langer Text die Karte sprengt */
+        overflow: hidden;
+    }
+</style>
 </head>
 <body>
 
