--- a/musik.html
+++ b/musik.html
@@ -12,18 +12,19 @@
     <button onclick="location.href='index.html'">Zurück zum Dashboard</button>
 </header>
 
-<section class="dashboard">
-    <div class="panel full-width">
-        <div class="panel-header">➕ Song zur Playlist hinzufügen</div>
-        <div style="display: grid; grid-template-columns: 1fr 1fr auto; gap: 10px; margin-top: 15px;">
+<section class="dashboard" style="display: grid; grid-template-columns: 450px 1fr; align-items: start; gap: 30px; padding: 30px;">
+    
+    <div class="panel" style="position: sticky; top: 30px;">
+        <div class="panel-header">➕ Song hinzufügen</div>
+        <div style="display: flex; flex-direction: column; gap: 15px; margin-top: 15px;">
             <input type="text" id="songTitle" placeholder="Song Titel (z.B. Lofi Hip Hop)">
             <input type="text" id="songUrl" placeholder="YouTube Link">
-            <button onclick="addSong()" class="submit-btn" style="margin:0;">Hinzufügen</button>
+            <button onclick="addSong()" class="submit-btn" style="width: 100%;">Zur Playlist hinzufügen</button>
         </div>
     </div>
 
-    <div class="panel full-width">
-        <div class="panel-header" style="display: flex; justify-content: space-between;">
+    <div class="panel">
+        <div class="panel-header" style="display: flex; justify-content: space-between; align-items: center;">
             <span>📻 Aktuelle Playlist</span>
             <span id="musicCounter" class="badge">0 Songs</span>
         </div>
@@ -34,7 +35,8 @@
             <span>Link</span>
             <span style="text-align: right;">Aktion</span>
         </div>
-        <div id="playlistContainer"></div>
+        <div id="playlistContainer">
+            </div>
     </div>
 </section>
 
