--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     if (typeof renderMeineAbmeldungen === "function") renderMeineAbmeldungen();
 });
 </script>
-
+    
+    <script src="script.js"></script>
 </body>
 </html>
